added houses for second collection
